--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@tsconfig/svelte": "^5.0.2",
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "^7.1.0",
+		"@typescript-eslint/parser": "^7.1.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.20.1",
+		"esbuild-svelte": "^0.8.0",
 		"obsidian": "latest",
 		"prettier": "^3.2.5",
+		"svelte": "^4.2.12",
+		"svelte-preprocess": "^5.1.3",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"dayjs": "^1.11.10"
+		"@typescript-eslint/scope-manager": "^7.1.0",
+		"@typescript-eslint/type-utils": "^7.1.0",
+		"@typescript-eslint/types": "^7.1.0",
+		"@typescript-eslint/typescript-estree": "^7.1.0",
+		"@typescript-eslint/utils": "^7.1.0",
+		"@typescript-eslint/visitor-keys": "^7.1.0",
+		"dayjs": "^1.11.10",
+		"undefined": "^0.1.0"
 	}
 }
